@@ -36,8 +36,6 @@ if ($gtCount < 1) {
 switch ($op) {
     case 'list':
     default:
-        // Define Stylesheet
-        $GLOBALS['xoTheme']->addStylesheet($style, null);
         $start        = Request::getInt('start', 0);
         $limit        = Request::getInt('limit', $helper->getConfig('adminpager'));
         $templateMain = 'wggallery_admin_gallerytypes.tpl';
