@@ -36,8 +36,6 @@ $GLOBALS['xoopsTpl']->assign('wggallery_upload_url', WGGALLERY_UPLOAD_URL);
 $GLOBALS['xoopsTpl']->assign('wggallery_upload_fonts_path', WGGALLERY_UPLOAD_FONTS_PATH);
 $GLOBALS['xoopsTpl']->assign('wggallery_icon_url_16', WGGALLERY_ICONS_URL . '/16');
 
-// Define Stylesheet
-$GLOBALS['xoTheme']->addStylesheet($style, null);
 $templateMain = 'wggallery_admin_import.tpl';
 $GLOBALS['xoopsTpl']->assign('navigation', $adminObject->displayNavigation('import.php'));
 
